@@ -2,6 +2,7 @@ unreleased
 ==========
 
 - higher PCM bit depth for apt-X HD (24-bit) and LDAC (32-bit)
+- support for A2DP Sink with apt-X (HD) if decoder is available
 - support for A2DP Sink with LDAC codec if decoder is available
 - use rst2man (docutils) instead of pandoc to build man-pages
 
